--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@
 
   {{content-for "head"}}
 
-  <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-  <link integrity="" rel="stylesheet" href="{{rootURL}}assets/bdb-app.css">
+  <link rel="stylesheet" href="{{rootURL}}assets/normalize.css">
+  <link rel="stylesheet" href="{{rootURL}}assets/bdb-app.css">
 
   {{content-for "head-footer"}}
 </head>
