--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,17 @@
   <link rel="stylesheet" href="{{rootURL}}assets/normalize.css">
   <link rel="stylesheet" href="{{rootURL}}assets/bdb-app.css">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
   {{content-for "head-footer"}}
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114374505-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114374505-1');
+  </script>
 </head>
 
 <body>
